# Pointator-3000

./: LICENCE  README.md  pyproject.toml
Cahier des charges/: .~lock.Tableau.odt#  Tableau.odt  exigences.txt
Pointator 3000/: main.py  test.py
Pointator 3000/controller/: controller.py
Pointator 3000/data/: points.txt  testfile.txt
Pointator 3000/models/: filerepo.py  model.py  point.py  testModels.py
resources/Cahier des charges/: exigences.txt
src/models/: filerepo.py  point.py
src/views/: view.py
tests/: testModels.py
